--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <version>5.0</version>
         </dependency>
         <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>0.10.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.functionaljava</groupId>
             <artifactId>functionaljava-java-core</artifactId>
             <version>5.0</version>
